--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,7 +4,7 @@ steps:
 - name: 'gcr.io/cloud-builders/docker'
   args: ['push', 'gcr.io/$PROJECT_ID/bolt-app']
 - name: 'gcr.io/cloud-builders/gcloud'
-  args: ['run', 'deploy', 'bolt-app', '--image', 'gcr.io/$PROJECT_ID/bolt-app:${SHORT_SHA}', '--region', 'asia-northeast1', '--allow-unauthenticated']
+  args: ['run', 'deploy', 'bolt-app', '--image', 'gcr.io/$PROJECT_ID/bolt-app:${SHORT_SHA}', '--region', 'asia-northeast1', '--platform', 'managed', '--allow-unauthenticated']
   env:
   - 'NODE_ENV=production'
   - 'SLACK_BOT_TOKEN=${_SLACK_BOT_TOKEN}'
