--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,6 +4,6 @@ steps:
 - name: 'gcr.io/cloud-builders/docker'
   args: ['push', 'gcr.io/$PROJECT_ID/bolt-app']
 - name: 'gcr.io/cloud-builders/gcloud'
-  args: ['run', 'deploy', 'bolt-app', '--image', 'gcr.io/$PROJECT_ID/bolt-app:${SHORT_SHA}', '--region', 'asia-northeast1', '--platform', 'managed', '--allow-unauthenticated', '--update-env-vars', 'NODE_ENV=production,SLACK_BOT_TOKEN=${_SLACK_BOT_TOKEN},SLACK_SIGNING_SECRET=${_SLACK_SIGNING_SECRET},SLACK_CLIENT_ID=${_SLACK_CLIENT_ID},SLACK_CLIENT_SECRET=${_SLACK_CLIENT_SECRET},SLACK_INSTALL_SHARABLE_URL=${_SLACK_INSTALL_SHARABLE_URL}']
+  args: ['run', 'deploy', 'bolt-app', '--image', 'gcr.io/$PROJECT_ID/bolt-app:${SHORT_SHA}', '--region', 'asia-northeast1', '--platform', 'managed', '--allow-unauthenticated', '--update-env-vars', 'NODE_ENV=production,SLACK_BOT_TOKEN=${_SLACK_BOT_TOKEN},SLACK_SIGNING_SECRET=${_SLACK_SIGNING_SECRET},SLACK_CLIENT_ID=${_SLACK_CLIENT_ID},SLACK_CLIENT_SECRET=${_SLACK_CLIENT_SECRET}']
 images:
 - gcr.io/$PROJECT_ID/bolt-app
