--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@google-cloud/datastore": "^5.0.3",
-    "@slack/bolt": "^1.5.0"
+    "@slack/bolt": "^1.5.0",
+    "source-map-support": "^0.5.16"
   }
 }
