--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "@google-cloud/datastore": "^5.0.3",
     "@slack/bolt": "^1.5.0",
+    "dayjs": "^1.8.19",
     "source-map-support": "^0.5.16"
   }
 }
