--- a/package.json
+++ b/package.json
@@ -12,27 +12,27 @@
     "lint": "eslint --ext .ts,.js --ignore-path .gitignore ."
   },
   "devDependencies": {
-    "@types/node": "^12.12.17",
-    "@types/webpack": "^4.41.0",
-    "@typescript-eslint/eslint-plugin": "^2.15.0",
-    "@typescript-eslint/parser": "^2.15.0",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.9.0",
-    "eslint-plugin-prettier": "^3.1.2",
-    "nodemon": "^2.0.2",
-    "prettier": "^1.19.1",
-    "ts-loader": "^6.2.1",
-    "ts-node": "^8.5.4",
-    "tsconfig-paths-webpack-plugin": "^3.2.0",
-    "typescript": "^3.7.4",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10",
-    "webpack-node-externals": "^1.7.2"
+    "@types/node": "12.19.9",
+    "@types/webpack": "^4.41.25",
+    "@typescript-eslint/eslint-plugin": "^4.10.0",
+    "@typescript-eslint/parser": "^4.10.0",
+    "eslint": "^7.15.0",
+    "eslint-config-prettier": "^7.0.0",
+    "eslint-plugin-prettier": "^3.3.0",
+    "nodemon": "^2.0.6",
+    "prettier": "^2.2.1",
+    "ts-loader": "^8.0.12",
+    "ts-node": "^9.1.1",
+    "tsconfig-paths-webpack-plugin": "^3.3.0",
+    "typescript": "^4.1.3",
+    "webpack": "^5.10.2",
+    "webpack-cli": "^4.2.0",
+    "webpack-node-externals": "^2.5.2"
   },
   "dependencies": {
-    "@google-cloud/datastore": "^5.0.3",
-    "@slack/bolt": "^1.5.0",
-    "dayjs": "^1.8.19",
-    "source-map-support": "^0.5.16"
+    "@google-cloud/datastore": "^6.3.1",
+    "@slack/bolt": "^2.5.0",
+    "dayjs": "^1.9.7",
+    "source-map-support": "^0.5.19"
   }
 }
